<resources>
    <string name="app_name" translatable="false">Bill</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="loginBtn">登录</string>
    <string name="toRegister">没有账号？立即注册</string>
    <string name="register">注册Bill</string>
    <string name="registerBtn">立即注册</string>
    <string name="title">Bill</string>
    <string name="phone">手机号</string>
    <string name="email">电子邮箱</string>
    <string name="tip">注册表示你同意该软件《用户服务协议》和《隐私政策》</string>

    <!--五个页面-->
    <string name="tv_tab_one">账单</string>
    <string name="tv_tab_two">统计</string>
    <string name="tv_tab_three">添加</string>
    <string name="tv_tab_four">理财</string>
    <string name="tv_tab_five">我的</string>

    <string name="add">花一笔</string>
    <string name="btn_outlay">支出</string>
    <string name="bill_date">支出日期</string>
    <string name="bill_money">支出金额</string>
    <string name="bill_remark">备注</string>

    <string name="btn_income">收入</string>
    <string name="bill_date_i">收入日期</string>
    <string name="bill_money_i">收入金额</string>

    <!--支出图标-->
    <string name="tv_play">娱乐</string>
    <string name="tv_food">餐饮</string>
    <string name="tv_shop">购物</string>
    <string name="tv_friend">社交</string>
    <string name="tv_medical">医疗</string>
    <string name="tv_phone">通讯</string>
    <string name="tv_home">住房</string>
    <string name="tv_daily">日用</string>
    <string name="tv_tour">旅游</string>
    <string name="tv_traffic">交通</string>
    <string name="tv_school">教育</string>
    <string name="tv_sport">运动</string>
    <string name="tv_pet">宠物</string>
    <string name="tv_baby">育儿</string>
    <string name="tv_other">其他</string>

    <!--收入图标-->
    <string name="tv_wage">工资</string>
    <string name="tv_award">奖金</string>
    <string name="tv_red">红包</string>
    <string name="tv_part">兼职</string>
    <string name="tv_fund">投资</string>
    <string name="tv_winning">中奖</string>
    <string name="tv_manage">理财</string>
    <string name="tv_business">生意</string>
    <string name="tv_transfer">转账</string>
    <string name="tv_stock">股票</string>
    <string name="tv_subsidy">津贴</string>
    <string name="tv_interest">利息</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_week">周</string>
    <string name="btn_month">月</string>
    <string name="btn_year">年</string>
    <string name="btn_logout">退出登录</string>

</resources>
