<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_outlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfbfb"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_food"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_selected"
                android:src="@mipmap/icon_o_food_selected" />

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_food"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_play_normal" />

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_play"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_phone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_phone_normal" />

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_phone"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_home_normal" />

            <TextView
                android:id="@+id/tv_4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_home"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_daily"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_daily_normal" />

            <TextView
                android:id="@+id/tv_5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_daily"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_friend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_friend_normal" />

            <TextView
                android:id="@+id/tv_6"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_friend"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_medical"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_medical_normal" />

            <TextView
                android:id="@+id/tv_7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_medical"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_traffic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_traffic_normal" />

            <TextView
                android:id="@+id/tv_8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_traffic"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_shop"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_shop_normal" />

            <TextView
                android:id="@+id/tv_9"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_shop"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_tour"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_tour_normal" />

            <TextView
                android:id="@+id/tv_10"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_tour"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <!--第三排-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_pet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_pet_normal" />

            <TextView
                android:id="@+id/tv_11"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_pet"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_school"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_school_normal" />

            <TextView
                android:id="@+id/tv_12"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_school"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_sport"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_sport_normal" />

            <TextView
                android:id="@+id/tv_13"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_sport"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_baby"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_baby_normal" />

            <TextView
                android:id="@+id/tv_14"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_baby"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/icon_other"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_button_normal"
                android:src="@mipmap/icon_o_other_normal" />

            <TextView
                android:id="@+id/tv_15"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/tv_other"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/add_panel"
        android:gravity="bottom|center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/input_date"
            android:layout_alignBottom="@+id/input_date"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="17dp"
            android:text="@string/bill_date"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_date"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:gravity="center|right"
            android:textSize="18sp"
            android:textStyle="normal"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:gravity="bottom|center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/input_money"
            android:layout_alignBottom="@id/input_money"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="17dp"
            android:text="@string/bill_money"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_money"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:ems="10"
            android:gravity="center|right"
            android:inputType="number|numberDecimal"
            android:maxLength="10"
            android:textSize="18sp"
            android:textStyle="normal"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/input_remark"
            android:layout_alignBottom="@id/input_remark"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="17dp"
            android:text="@string/bill_remark"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_remark"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:ems="10"
            android:gravity="center|right"
            android:hint="无"
            android:maxLength="10"
            android:textSize="18sp"
            android:textStyle="normal"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="right"
        android:paddingRight="7dp">

        <ImageView
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:src="@mipmap/icon_save" />
    </RelativeLayout>


</LinearLayout>