<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/bill_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="609dp"
            android:background="@drawable/add_title"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="#D0FFFFFF"
            android:textSize="24sp" />

    </RelativeLayout>

    <!--支出和收入两个按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/add_title"
        android:orientation="horizontal"
        android:paddingLeft="85dp"
        android:paddingTop="5dp"
        android:paddingRight="85dp"
        android:paddingBottom="13dp">

        <Button
            android:id="@+id/outlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/outlay_button_selected"
            android:gravity="center"
            android:text="@string/btn_outlay"
            android:textColor="#FCFBFB"
            android:textSize="18sp" />

        <Button
            android:id="@+id/income_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/income_button_normal"
            android:gravity="center"
            android:text="@string/btn_income"
            android:textColor="#6e72ec"
            android:textSize="18sp" />
    </LinearLayout>

    <!--替换支出和收入页面-->
    <FrameLayout
        android:id="@+id/fl_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
